Fixed width of pumpkin to work better on mobile.

--- a/static/css/added.css
+++ b/static/css/added.css
@@ -273,20 +273,18 @@ header .hackathon-logo {
     margin-left: 50%;
   }
   img#pumpkin{
-    position: absolute;
-    z-index: 200;
     margin-top: -70px;
     height: 150px;
-    margin-left: 39.5%;
+    margin-left: -1.2rem;
   }
 }
 
 #pumpkin{
   position: absolute;
   height: 200px;
-  margin-left: 41.5%;
   z-index: 200;
   margin-top: -120px;
+  margin-left: -2rem;
 }
 
 .firepit {
